# football-betting-bot

./: .env.example  .gitignore  pyproject.toml
src/betbot/: cli.py  config.py
src/betbot/data/: api_client.py  cache.py  db.py  historical.py  repositories.py  sync.py
src/betbot/display/: formatters.py  tables.py
src/betbot/markets/: value.py
src/betbot/models/: dixon_coles.py  ensemble.py  features.py  logistic_btts.py  poisson_glm.py  xgboost_cards.py
src/betbot/utils/: math_helpers.py
tests/: conftest.py
tests/integration/: test_repositories.py
tests/unit/: test_dixon_coles.py  test_historical.py  test_math_helpers.py  test_models.py  test_value.py
