[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "football-betting-bot"
version = "0.1.0"
description = "AI football betting analytics bot for top 5 leagues + Champions League"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27",
    "pandas>=2.2",
    "numpy>=2.0",
    "scipy>=1.14",
    "scikit-learn>=1.5",
    "xgboost>=2.1",
    "rich>=13",
    "click>=8",
    "diskcache>=5",
    "python-dotenv>=1",
]

[project.scripts]
betbot = "betbot.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.11",
]
# Historical training data from football-data.co.uk (free, corners/cards/referee/odds)
historical = [
    "soccerdata>=0.6",
]
# Optional: production-ready Dixon-Coles (Cython-optimised)
# penaltyblog has DixonColesGoalModel, implied odds tools, and data scrapers
advanced = [
    "soccerdata>=0.6",
    "penaltyblog>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=betbot --cov-report=term-missing --cov-fail-under=60"

[tool.mypy]
python_version = "3.13"
strict = true
